hh/vDSP.h

    /*  Define types:

            vDSP_Length for numbers of elements in arrays and for indices of
            elements in arrays.  (It is also used for the base-two logarithm of
            numbers of elements, although a much smaller type is suitable for
            that.)

            vDSP_Stride for differences of indices of elements (which of course
            includes strides).
    */
    typedef unsigned long vDSP_Length;
typedef long long vDSP_Stride;
typedef long vDSP_Stride;
/*  Maps:

        Pseudocode:     Memory:
        A[m][p]         A->realp[(m*P+p)*IA] + i * A->imagp[(m*P+p)*IA].
        B[p][n]         B->realp[(p*N+n)*IB] + i * B->imagp[(p*N+n)*IB].
        C[m][n]         C->realp[(m*N+n)*IC] + i * C->imagp[(m*N+n)*IC].

    These compute:

        for (m = 0; m < M; ++m)
        for (n = 0; n < N; ++n)
            C[m][n] = sum(A[m][p] * B[p][n], 0 <= p < P);
*/

// Vector add.
extern void vDSP_vadd(const float *__A, vDSP_Stride __IA, const float *__B,
                      vDSP_Stride __IB, float *__C, vDSP_Stride __IC,
                      vDSP_Length __N) API_AVAILABLE(macos(10.0), ios(4.0));
extern void vDSP_vaddD(const double *__A, vDSP_Stride __IA, const double *__B,
                       vDSP_Stride __IB, double *__C, vDSP_Stride __IC,
                       vDSP_Length __N) API_AVAILABLE(macos(10.2), ios(4.0));
extern void vDSP_vaddi(const int *__A, vDSP_Stride __IA, const int *__B,
                       vDSP_Stride __IB, int *__C, vDSP_Stride __IC,
                       vDSP_Length __N) API_AVAILABLE(macos(10.9), ios(7.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            C[n] = A[n] + B[n];
*/

// Vector subtract.
extern void vDSP_vsub(const float *__B, // Caution:  A and B are swapped!
                      vDSP_Stride __IB,
                      const float *__A, // Caution:  A and B are swapped!
                      vDSP_Stride __IA, float *__C, vDSP_Stride __IC,
                      vDSP_Length __N) API_AVAILABLE(macos(10.0), ios(4.0));
extern void vDSP_vsubD(const double *__B, // Caution:  A and B are swapped!
                       vDSP_Stride __IB,
                       const double *__A, // Caution:  A and B are swapped!
                       vDSP_Stride __IA, double *__C, vDSP_Stride __IC,
                       vDSP_Length __N) API_AVAILABLE(macos(10.2), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            C[n] = A[n] - B[n];
*/

// Vector multiply.
extern void vDSP_vmul(const float *__A, vDSP_Stride __IA, const float *__B,
                      vDSP_Stride __IB, float *__C, vDSP_Stride __IC,
                      vDSP_Length __N) API_AVAILABLE(macos(10.0), ios(4.0));
extern void vDSP_vmulD(const double *__A, vDSP_Stride __IA, const double *__B,
                       vDSP_Stride __IB, double *__C, vDSP_Stride __IC,
                       vDSP_Length __N) API_AVAILABLE(macos(10.2), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            C[n] = A[n] * B[n];
*/

// Vector divide.
extern void vDSP_vdiv(const float *__B, // Caution:  A and B are swapped!
                      vDSP_Stride __IB,
                      const float *__A, // Caution:  A and B are swapped!
                      vDSP_Stride __IA, float *__C, vDSP_Stride __IC,
                      vDSP_Length __N) API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vdivD(const double *__B, // Caution:  A and B are swapped!
                       vDSP_Stride __IB,
                       const double *__A, // Caution:  A and B are swapped!
                       vDSP_Stride __IA, double *__C, vDSP_Stride __IC,
                       vDSP_Length __N) API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            C[n] = A[n] / B[n];
*/

// Vector-scalar multiply.
extern void vDSP_vsmul(const float *__A, vDSP_Stride __IA, const float *__B,
                       float *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.0), ios(4.0));
extern void vDSP_vsmulD(const double *__A, vDSP_Stride __IA, const double *__B,
                        double *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.2), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            C[n] = A[n] * B[0];
*/

// Vector square.
extern void vDSP_vsq(const float *__A, vDSP_Stride __IA, float *__C,
                     vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.0), ios(4.0));
extern void vDSP_vsqD(const double *__A, vDSP_Stride __IA, double *__C,
                      vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.2), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            C[n] = A[n]**2;
*/

// Vector signed square.
extern void vDSP_vssq(const float *__A, vDSP_Stride __IA, float *__C,
                      vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.0), ios(4.0));
extern void vDSP_vssqD(const double *__A, vDSP_Stride __IA, double *__C,
                       vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.2), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        C[0] = sum(A[n] * B[n], 0 <= n < N);
*/

// Vector add and multiply.
extern void vDSP_vam(const float *__A, vDSP_Stride __IA, const float *__B,
                     vDSP_Stride __IB, const float *__C, vDSP_Stride __IC,
                     float *__D, vDSP_Stride __ID, vDSP_Length __N)
    API_AVAILABLE(macos(10.0), ios(4.0));
extern void vDSP_vamD(const double *__A, vDSP_Stride __IA, const double *__B,
                      vDSP_Stride __IB, const double *__C, vDSP_Stride __IC,
                      double *__D, vDSP_Stride __IDD, vDSP_Length __N)
    API_AVAILABLE(macos(10.2), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            D[n] = (A[n] + B[n]) * C[n];
*/

// Vector multiply and add.
extern void vDSP_vma(const float *__A, vDSP_Stride __IA, const float *__B,
                     vDSP_Stride __IB, const float *__C, vDSP_Stride __IC,
                     float *__D, vDSP_Stride __ID, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vmaD(const double *__A, vDSP_Stride __IA, const double *__B,
                      vDSP_Stride __IB, const double *__C, vDSP_Stride __IC,
                      double *__D, vDSP_Stride __ID, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            C[n] = A[n];
*/

// Vector absolute value.
extern void vDSP_vabs(const float *__A, vDSP_Stride __IA, float *__C,
                      vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vabsD(const double *__A, vDSP_Stride __IA, double *__C,
                       vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vabsi(const int *__A, vDSP_Stride __IA, int *__C,
                       vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            C[n] = A[0];
*/

// Vector-scalar add.
extern void vDSP_vsadd(const float *__A, vDSP_Stride __IA, const float *__B,
                       float *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vsaddD(const double *__A, vDSP_Stride __IA, const double *__B,
                        double *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vsaddi(const int *__A, vDSP_Stride __IA, const int *__B,
                        int *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        If Flag is 1:
            alpha = 20;
        If Flag is 0:
            alpha = 10;

        for (n = 0; n < N; ++n)
            C[n] = alpha * log10(A[n] / B[0]);
*/

// Vector distance.
extern void vDSP_vdist(const float *__A, vDSP_Stride __IA, const float *__B,
                       vDSP_Stride __IB, float *__C, vDSP_Stride __IC,
                       vDSP_Length __N) API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vdistD(const double *__A, vDSP_Stride __IA, const double *__B,
                        vDSP_Stride __IB, double *__C, vDSP_Stride __IC,
                        vDSP_Length __N) API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            C[n] = A[n];
*/

// Vector fraction part (subtract integer toward zero).
extern void vDSP_vfrac(const float *__A, vDSP_Stride __IA, float *__C,
                       vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vfracD(const double *__A, vDSP_Stride __IA, double *__C,
                        vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            E[n] = A[n]*B[n] - C[n]*D[n];
*/

// Vector multiply and scalar add.
extern void vDSP_vmsa(const float *__A, vDSP_Stride __IA, const float *__B,
                      vDSP_Stride __IB, const float *__C, float *__D,
                      vDSP_Stride __ID, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vmsaD(const double *__A, vDSP_Stride __IA, const double *__B,
                       vDSP_Stride __IB, const double *__C, double *__D,
                       vDSP_Stride __ID, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        for (n = 0; n < N; ++n)
            C[n] = -|A[n]|;
*/

// Vector negate.
extern void vDSP_vneg(const float *__A, vDSP_Stride __IA, float *__C,
                      vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vnegD(const double *__A, vDSP_Stride __IA, double *__C,
                       vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
/*  Maps:  The default maps are used.

    These compute:

        C[0] = 0;
        C[1] = B[0] * (A[0] + A[1])/2;
        for (n = 2; n < N; ++n)
            C[n] = C[n-2] + B[0] * (A[n-2] + 4*A[n-1] + A[n])/3;
*/

// Vector-scalar multiply and vector add.
extern void vDSP_vsma(const float *__A, vDSP_Stride __IA, const float *__B,
                      const float *__C, vDSP_Stride __IC, float *__D,
                      vDSP_Stride __ID, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));
extern void vDSP_vsmaD(const double *__A, vDSP_Stride __IA, const double *__B,
                       const double *__C, vDSP_Stride __IC, double *__D,
                       vDSP_Stride __ID, vDSP_Length __N)
    API_AVAILABLE(macos(10.4), ios(4.0));